--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/react": "^18.0.33",
     "@types/react-dom": "^18.0.11",
     "bootstrap": "^4.6.0",
+    "firebase": "^9.19.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.2",
     "react-dom": "^18.2.0",
